--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<meta charset="utf-8">
+	<title>Shrek</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+<h1>What! </h1>
 </body>
 </html>
